Sutter Health/src/objects/Nursing__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Tab</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Public to all nurses</description>
    <fields>
        <fullName>Article_Body__c</fullName>
        <description>Content</description>
        <label>Article Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Header__c</fullName>
        <description>This is for adding a article header image</description>
        <inlineHelpText>Add a header image if you want to show it on the header part</inlineHelpText>
        <label>Article Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Video__c</fullName>
        <description>Adds video to the article</description>
        <inlineHelpText>Add video in iframe if you want to show it in pages</inlineHelpText>
        <label>Article Video</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CustomImage__c</fullName>
        <description>This is for showing special content for articles</description>
        <inlineHelpText>This is for showing special content for articles</inlineHelpText>
        <label>Article Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>customShorttext__c</fullName>
        <description>This is for adding a custom image</description>
        <inlineHelpText>Add image to show on Menu</inlineHelpText>
        <label>Article Short Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>weight__c</fullName>
        <label>weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Nursing</label>
    <pluralLabel>Nursing</pluralLabel>
</CustomObject>